--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,9 +19,9 @@ spec:
           image: cassiocaue/vehicle-sale-application:latest
           ports:
             - containerPort: 8080
-          env:
-            - name: SPRING_PROFILES_ACTIVE
-              value: "prod"
+          envFrom:
+            - configMapRef:
+                name: vehicle-sale-config
           resources:
             requests:
               memory: "512Mi"
