--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: vehicle-sale-service
 spec:
+  type: NodePort
   selector:
     app: vehicle-sale-application
   ports:
     - protocol: TCP
       port: 80
       targetPort: 8080
-  type: LoadBalancer
+      nodePort: 30001
